feat: 添加文章详情页面功能
- 新增文章详情页面(/views/Article/index.vue)，包含完整的文章展示和互动功能
- 添加文章详情相关API接口(getArticleDetail, updateReadCount等)
- 更新后端ArticleController和Service，增加文章详情查询和阅读量更新功能
- 完善用户主页的文章列表展示和跳转功能
- 优化路由配置，支持文章详情页面访问
- 改进代码规范，更新前端开发规则文档